src/types/tests/snapshots/tgbot__types__tests__bot__set_bot_commands-2.snap
---
source: src/types/tests/bot.rs
expression: actual_data
---
{
  "commands": [
    {
      "command": "name",
      "description": "description"
    }
  ],
  "language_code": "ru",
  "scope": {
    "type": "all_private_chats"
  }
}
