src/types/tests/snapshots/tgbot__types__tests__bot__set_bot_commands.snap
---
source: src/types/tests/bot.rs
expression: actual_data
---
{
  "commands": [
    {
      "command": "name",
      "description": "description"
    }
  ]
}
