src/types/tests/snapshots/tgbot__types__tests__bot__set_bot_default_administrator_rights-2.snap
---
source: src/types/tests/bot.rs
expression: actual_data
---
{
  "rights": {
    "can_change_info": false,
    "can_delete_messages": false,
    "can_invite_users": false,
    "can_manage_chat": false,
    "can_manage_video_chats": false,
    "can_promote_members": false,
    "can_restrict_members": false,
    "is_anonymous": false
  }
}
