src/types/tests/snapshots/tgbot__types__tests__bot__set_bot_description-2.snap
---
source: src/types/tests/bot.rs
expression: actual_data
---
{
  "description": "test-description",
  "language_code": "RU"
}
