src/types/tests/snapshots/tgbot__types__tests__bot__set_bot_name-2.snap
---
source: src/types/tests/bot.rs
expression: actual_data
---
{
  "language_code": "RU",
  "name": "test_bot_name"
}
