src/types/tests/snapshots/tgbot__types__tests__bot__set_bot_profile_photo.snap
---
source: src/types/tests/bot.rs
expression: actual_data
---
{
  "photo": {
    "photo": "https://example.com/photo.png",
    "type": "static"
  }
}
