src/types/tests/snapshots/tgbot__types__tests__bot__set_bot_short_description-2.snap
---
source: src/types/tests/bot.rs
expression: actual_data
---
{
  "language_code": "RU",
  "short_description": "test-short-description"
}
