src/types/tests/snapshots/tgbot__types__tests__bot__set_managed_bot_access_settings-2.snap
---
source: src/types/tests/bot.rs
expression: actual_data
---
{
  "added_user_ids": [
    2,
    3,
    4
  ],
  "is_access_restricted": false,
  "user_id": 1
}
