src/types/tests/snapshots/tgbot__types__tests__bot__set_managed_bot_access_settings.snap
---
source: src/types/tests/bot.rs
expression: actual_data
---
{
  "is_access_restricted": false,
  "user_id": 1
}
